--- a/plugin.xml
+++ b/plugin.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<plugin xmlns="http://apache.org/cordova/ns/plugins/1.0" id="xwang.cordova.alipay" version="0.0.1">
+<plugin xmlns="http://apache.org/cordova/ns/plugins/1.0" id="uuke.cordova.alipay" version="0.0.1">
 	<name>Alipay</name>
 	<description>A cordova plugin, a JS version of Alipay SDK</description>
 	<license>MIT</license>
